<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_collapseParallaxMultiplier="1.0">

    <TextView
        android:text="@string/dialog_contact_me_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/dialog_text"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:text="@string/dialog_contact_me_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <Button
            android:text="@string/accept_contact_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_accept"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            />

        <Button
            android:text="@string/refuse_contact_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_refuse"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>