<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/miniature"
        android:background="@android:color/darker_gray"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/imgViewID"
        />

    <TextView
        android:id="@+id/location_surface_rooms"
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/miniature"
        android:text="@string/title_texte"
        />
    <TextView
        android:id="@+id/price_type"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_surface_rooms"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/miniature"
        android:text="@string/description_text"
        />
</merge>