<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.project.user.LoginActivity"
    android:weightSum="1">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.71"
        tools:ignore="UnusedIds,UselessParent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            tools:ignore="UnusedIds">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="1234"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_login"
                android:textStyle="bold"
                android:onClick="attemptLogin"
                android:textColor="?android:attr/textColorPrimary"
                tools:ignore="UnusedIds" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />

                <TextView
                    android:text="@string/register_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_suggestion_message"
                    android:textAlignment="center"
                    tools:ignore="UnusedIds" />

                <Button
                    android:text="@string/action_goto_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/goto_registration_button"
                    android:onClick="proceedToRegistration"
                    android:textStyle="normal|bold"
                    android:fontFamily="sans-serif"
                    android:textColor="?android:attr/textColorTertiary"
                    tools:ignore="UnusedIds" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
