<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.project.ListActivity"
    tools:ignore="UnusedIds">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/button_shape"
            android:text="@string/LogOut"
            android:textColor="#55CACF" />

        <Button
            android:id="@+id/FavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/button_shape"
            android:text="@string/favorites"
            android:textColor="#55CACF" />

        <Button
            android:id="@+id/filterButtonPopUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button_shape"
            android:text="@string/Filter"
            android:textAllCaps="false"
            android:textColor="#55CACF"
            android:textSize="20sp" />
    </LinearLayout>


    <ListView
        android:id="@+id/houseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>

